yaml/demos/gwapi/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: openshift-gateway
spec:
  controllerName: "openshift.io/gateway-controller"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: ${GWAPI_NS}
spec:
  #selector:
  #  istio: openshift-gateway # use Istio default gateway implementation
  gatewayClassName: openshift-gateway
  ${GW_ADDRESSES_YAML}
  listeners:
  - name: http
    hostname: "http.${GWAPI_DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: edge
    hostname: "edge.${GWAPI_DOMAIN}"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: edge-credential
        group: ""
    allowedRoutes:
      namespaces:
        from: All
  - name: reencrypt
    hostname: "re.${GWAPI_DOMAIN}"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: re-credential
        group: ""
    allowedRoutes:
      namespaces:
        from: All
  - name: passthrough
    hostname: "pass.${GWAPI_DOMAIN}"
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TLSRoute
  - name: http-features
    hostname: "*.hf.${GWAPI_DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: scope
    hostname: "scope.${GWAPI_DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: invalid-rg
    hostname: "invalid-rg.${GWAPI_DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: valid-rg
    hostname: "valid-rg.${GWAPI_DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
