yaml/demos/gwapi/cluster-scope-test.yaml
# This is a test specifically to test for cluster scoped Gateway API objects
# if you can't curl this URL, then it isn't being reconciled
apiVersion: v1
kind: Namespace
metadata:
  name: scope
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: scope
  namespace: scope
spec:
  parentRefs:
  - name: gateway
    namespace: ${GWAPI_NS}
  hostnames: ["scope.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: scope
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: scope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      serviceAccountName: nginx
      containers:
      - image: quay.io/gspence/nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8080
---
