yaml/demos/gwapi/http-cookies.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-cookie
  namespace: ${GWAPI_NS}
spec:
  parentRefs:
  - name: gateway
  hostnames: ["http-cookie.hf.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx-cookie
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cookie
  namespace: ${GWAPI_NS}
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cookie
  namespace: ${GWAPI_NS}
spec:
  host: nginx-cookie.gwapi.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: demo
          ttl: 0s
    connectionPool:
      http:
        idleTimeout: 5s
