yaml/demos/gwapi/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-port-redirect
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
  hostnames: ["http-port-redirect.hf.${GWAPI_DOMAIN}"]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: http
        port: 8000
