yaml/demos/gwapi/http-request-header-mod.yaml
# NOTE: This is REQUEST headers, not response headers. The headers that get sent to the upstream backend, not back to the client.
# This is impossible to valid using the demo we have
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-request-header-mod
  namespace: ${GWAPI_NS}
spec:
  parentRefs:
  - name: gateway
  hostnames: ["http-request.hf.${GWAPI_DOMAIN}"]
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: Test123
          value: test
    backendRefs:
    - name: nginx
      port: 8000
