yaml/demos/gwapi/http-rewrite.yaml
# AS OF AUG 09, 2022: I can't get this to work because this only works with Istio v1.15!!!
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-rewrite
spec:
  parentRefs:
  - name: gateway
  hostnames: ["http-rewrite.hf.${GWAPI_DOMAIN}"]
  rules:
  - filters:
    - type: URLRewrite
      urlRewrite:
        hostname: "http.${GWAPI_DOMAIN}"
    backendRefs:
    - name: nginx
      port: 8000
