yaml/demos/gwapi/referencegrant-test.yaml
# This should FAIL because there is no reference grant!
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reference-grant-invalid-test
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["invalid-rg.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx
      namespace: scope
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reference-grant-valid-test
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
    namespace: gwapi
  hostnames: ["valid-rg.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx
      namespace: auto
      port: 8000
---
apiVersion: v1
kind: Namespace
metadata:
  name: auto
---
apiVersion: gateway.networking.k8s.io/v1beta1
#apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: auto
  namespace: auto
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gwapi
  to:
  - group: ""
    kind: Service
