yaml/demos/gwapi/termination-edge.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: edge
spec:
  parentRefs:
  - name: gateway
  hostnames: ["edge.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx
      port: 8000
