yaml/demos/gwapi/termination-http-namespace.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
  hostnames: ["http.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx
      port: 8000
