yaml/demos/gwapi/termination-reencrypt.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-reencrypt
  namespace: gwapi
  labels:
    app: nginx-ssl
    service: nginx-reencrypt
spec:
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    appProtocol: https
  selector:
    app: nginx-ssl
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reencrypt
  namespace: gwapi
spec:
  host: nginx-reencrypt.gwapi.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reencrypt
  namespace: gwapi
spec:
  parentRefs:
  - name: gateway
  hostnames: ["re.${GWAPI_DOMAIN}"]
  rules:
  - backendRefs:
    - name: nginx-reencrypt
      port: 8443
